Add update user grpc api
